logs/xmi2oerp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Genshi-0.7.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/genshi'...
Listing './lib/python3.5/site-packages/genshi/filters'...
Listing './lib/python3.5/site-packages/genshi/filters/tests'...
Listing './lib/python3.5/site-packages/genshi/template'...
Listing './lib/python3.5/site-packages/genshi/template/tests'...
Listing './lib/python3.5/site-packages/genshi/template/tests/templates'...
Listing './lib/python3.5/site-packages/genshi/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/xmi2oerp'...
Compiling './lib/python3.5/site-packages/xmi2oerp/builder.py'...
***   File "./lib/python3.5/site-packages/xmi2oerp/builder.py", line 97
    raise RuntimeError, 'Unlinked menues.'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmi2oerp/data'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/licenses'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/data'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/report'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/security'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/view'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/wizard'...
Listing './lib/python3.5/site-packages/xmi2oerp/data/template/workflow'...
Compiling './lib/python3.5/site-packages/xmi2oerp/model.py'...
***   File "./lib/python3.5/site-packages/xmi2oerp/model.py", line 313
    raise RuntimeError, 'File not found. Search paths: %s' % querypaths
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmi2oerp/uml.py'...
***   File "./lib/python3.5/site-packages/xmi2oerp/uml.py", line 228
    raise RuntimeError, 'prev_leafs loop cant stop'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmi2oerp-1.3.19.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
